Fairly significant refactoring and inclusion of XHTML parsing/XSL transformation. Not quite working yet

--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,21 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<dependencies>
+	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.8.2</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<modules>
 		<module>analyticproxy-core</module>
+		<module>analyticproxy-validation</module>
+		<module>analyticproxy-api</module>
 	</modules>
 
 	<build>
