--- a/analyticproxy-core/pom.xml
+++ b/analyticproxy-core/pom.xml
@@ -4,6 +4,12 @@
 	<groupId>org.analyticproxy</groupId>
 	<artifactId>analyticproxy-core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<parent>
+		<groupId>org.analyticproxy</groupId>
+		<artifactId>analyticproxy</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -39,6 +45,16 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>0.9.26</version>
+		</dependency>
+		<dependency>
+			<groupId>org.analyticproxy</groupId>
+			<artifactId>analyticproxy-validation</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>r07</version>
 		</dependency>
 	</dependencies>
 
