--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
 	<packaging>pom</packaging>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
+			<version>1.6.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+			<version>1.6.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -19,8 +33,6 @@
 	</dependencyManagement>
 	<modules>
 		<module>analyticproxy-core</module>
-		<module>analyticproxy-validation</module>
-		<module>analyticproxy-api</module>
 	</modules>
 
 	<build>
