--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 .settings
 target
 bin
-unicorn-server/apache-tomcat-6.0.29/target
+unicorn-server/apache-tomcat-6.0.29/savedContent
 unicorn-server/apache-tomcat-6.0.29/webapps/unicorn
-unicorn-server/apache-tomcat-6.0.29/proxyWebapps/analyticproxy-core-1.0.0-SNAPSHOT
 unicorn-server/apache-tomcat-6.0.29/logs
 unicorn-server/apache-tomcat-6.0.29/work
+unicorn-server/apache-tomcat-6.0.29/proxyWebapps/analyticproxy-core-0.0.1-SNAPSHOT
