--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 target
 bin
 proxy-server/apache-tomcat-6.0.29/savedContent
-proxy-server/apache-tomcat-6.0.29/webapps/*
+proxy-server/apache-tomcat-6.0.29/webapps/*.war
 proxy-server/apache-tomcat-6.0.29/logs/*
 proxy-server/apache-tomcat-6.0.29/work/*
-proxy-server/apache-tomcat-6.0.29/proxyWebapps/*
+proxy-server/apache-tomcat-6.0.29/proxyWebapps/*.war
 **/.DS_Store
